<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/Login_linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/circle"
                    android:padding="10dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login_title"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/Login_imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_below="@+id/Login_linearLayout1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-10dp"
                android:rotation="45"
                android:src="@drawable/square" />

            <RelativeLayout
                android:id="@+id/Login_relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_imageView1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/Login_imageView_userIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_user"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/Login_EditText_UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/Login_imageView_userIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/Login_imageView_userIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/login_username"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Login_relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_relativeLayout1"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp">

                <ImageView
                    android:id="@+id/Login_imageView_passwordIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/colorPrimary"
                    android:padding="8dp"
                    android:src="@drawable/img_authentication"
                    android:tint="@color/white" />

                <EditText
                    android:id="@+id/Login_EditText_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/Login_imageView_passwordIcon"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/Login_imageView_passwordIcon"
                    android:background="@color/editTextBG"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:paddingLeft="20dp"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Login_relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Login_relativeLayout2"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp">

                <CheckBox
                    android:id="@+id/Login_CheckBox_RememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/login_remember_me"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/Login_Button_ForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/transparent"
                    android:text="@string/login_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor"
                    android:textSize="13sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/Login_button_Sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_relativeLayout3"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login_sign_in"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/Login_imageView2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/Login_button_Sign_in"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layerType="software"
                android:src="@drawable/dash" />

            <TextView
                android:id="@+id/Login_textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Login_imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="0dp"
                android:text="Or Login with"
                android:textColor="@color/textColor"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/Login_linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/Login_Button_Facebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/Login_TextView_Sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Login_linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_sign_up" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>